@@ -15,6 +15,5 @@
         <text id="uefd3">Since then, we have been trying to stay alive, fighting the natives here for survival.</text>
       </section>
   </lang>
-	
 </data>
 	
